# pv-measurement-system

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  mppt_graph.py  sdkconfig.defaults  sweep_graph.py
.cargo/: config.toml
kicad/: 100to5.kicad_sch  12to-12.kicad_sch  3to12.kicad_sch  fp-lib-table  projektkicad-B_Cu.gbr  projektkicad-B_Mask.gbr  projektkicad-B_Paste.gbr  projektkicad-B_Silkscreen.gbr  projektkicad-Edge_Cuts.gbr  projektkicad-F_Cu.gbr  projektkicad-F_Mask.gbr  projektkicad-F_Paste.gbr  projektkicad-F_Silkscreen.gbr  projektkicad-NPTH-drl_map.gbr  projektkicad-NPTH.drl  projektkicad-PTH-drl_map.gbr  projektkicad-PTH.drl  projektkicad-job.gbrjob  projektkicad.kicad_pcb  projektkicad.kicad_prl  projektkicad.kicad_pro  projektkicad.kicad_sch  projektkicad_gammal.kicad_pcb  projektkicad_gammal.kicad_pro  projektkicadv2.kicad_prl  projektlib.bak  projektlib.kicad_sym  sym-lib-table
kicad/projektlib.pretty/: ttgo.kicad_mod
src/: display.rs  main.rs  panic_hook.rs
src/encryption/: mod.rs  nonce.rs
src/lora/: mod.rs  nonce.rs
src/lora/sx/: mod.rs
src/receiver/: calibration.rs  influx.rs  messages.rs  mod.rs  server.rs  time.rs  wifi.rs
src/sender/: compat.rs  mod.rs  temperature.rs
src/sender/mppt/: ic.rs  mod.rs  po.rs
